@@ -1,3 +1,5 @@
+    
+    ADDED: atomic extensions (see CVSNEWS)
     ADDED: archive packing / unpacking are now in the background
     ADDED: renaming of just the filename, without extension
     ADDED: full screen terminal window (mc-style)
